# QRCodeLibrary

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Example.txt  QRCodeLibrary.sln  README.MD
.github/workflows/: release.yml
Demo/: CMakeLists.txt  Demo.vcxproj  main.cpp
QRCodeLibrary/: BitArray.cpp  BitArray.hpp  CMakeLists.txt  DataBlocks.cpp  DataBlocks.hpp  Encode.cpp  Encode.hpp  Encoder.cpp  Encoder.hpp  Method.cpp  Method.hpp  QRCode.cpp  QRCode.hpp  QRCodeLibrary.cpp  QRCodeLibrary.vcxproj  QRCodeLibrary.vcxproj.filters  QRMatrix.cpp  QRMatrix.hpp  Tables.cpp  Tables.hpp  TritMatrix.cpp  TritMatrix.hpp  method.hpp  utils.hpp
tests/: BitArray_test.cpp  CMakeLists.txt  DataBlocks_test.cpp  Encode_test.cpp  Encoder_test.cpp  Method_test.cpp  QRCode_test.cpp  QRMatrix_test.cpp  TritMatrix_test.cpp  main_tests.cpp  tests.vcxproj
